--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="wrapper">
-    <video class="flex" width="765" height="430" src="https://www.youtube.com/watch?v=vQ2A1pOchFM&t=2s" loop controls></video>
+    <video class="flex" width="765" height="430" src="https://www.dropbox.com/s/ytio1qsfxlotgsp/Eleftheria%20Batsou%20-%20CV.mp4?dl=1" loop controls></video>
     <div class="speed">
       <div class="speed-bar">1×</div>
     </div>
